# services/api-gateway/main.go
@@ -78,6 +78,7 @@ func main() {
 	r.POST("/api/payments/create", handlers.CreatePayment(paymentClient))
 	r.GET("/api/payments", handlers.GetPayments(paymentClient))
 	r.GET("/api/payments/:paymentId", handlers.GetPaymentById(paymentClient))
+	r.POST("/api/transfers", handlers.CreateTransfer(paymentClient))
 	r.POST("/api/recipients", handlers.CreatePaymentRecipient(paymentClient))
 	r.GET("/api/recipients", handlers.GetPaymentRecipients(paymentClient))
 	r.PUT("/api/recipients/:id", handlers.UpdatePaymentRecipient(paymentClient))
